--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon.svg" type="image/svg" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/png" />
     <title>Coffee Delivery</title>
   </head>
   <body>
